[package]
name = "redis_cluster_async"
version = "0.1.2-alpha.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
keywords = ["redis", "cluster", "database", "async"]
description = "Async redis cluster driver for Rust."
homepage = "https://github.com/Marwes/redis-cluster-async"
repository = "https://github.com/Marwes/redis-cluster-async"
license = "MIT"
readme = "README.md"

edition = "2018"

[dependencies]
crc16 = "0.4"
futures = "0.3"
rand = "0.7"
redis = { version = "0.14", features = ["tokio-rt-core"] }
tokio = { version = "0.2", features = ["time"] }
log = "0.4"

[dev-dependencies]
lazy_static = "1"
tokio = { version = "0.2", features = ["macros", "full"] }
env_logger = "0.7"
proptest = "0.9"
