[package]
name = "redis_cluster_async"
version = "0.7.1-alpha.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
keywords = ["redis", "cluster", "database", "async"]
description = "Async redis cluster driver for Rust."
homepage = "https://github.com/Marwes/redis-cluster-async"
repository = "https://github.com/Marwes/redis-cluster-async"
license = "MIT"
readme = "README.md"

edition = "2018"

[dependencies]
crc16 = "0.4"
futures = "0.3"
pin-project-lite = "0.2"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
redis = { version = "0.21", features = ["tokio-comp", "tokio-native-tls-comp"] }
tokio = { version = "1", features = ["time"] }
log = "0.4"

[dev-dependencies]
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "full"] }
env_logger = "0.8"
proptest = "0.10"
